--- a/chirper/package.json
+++ b/chirper/package.json
@@ -3,24 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@chakra-ui/input": "^1.2.8",
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-redux": "^7.1.18",
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap-icons": "^1.8.1",
+    "country-flag-icons": "^1.4.25",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.3",
+    "react-loading-spin": "^2.1.9",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^0.0.0-experimental-compat.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "sass": "^1.50.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
