--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "babel-core": "6.26.3",
     "babel-preset-es2015": "6.24.1",
     "babel-register": "6.26.0",
     "bluebird": "3.5.5",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "cross-fetch": "^3.1.5",
+    "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
+    "express-jwt-permissions": "^1.3.6",
+    "express-openid-connect": "^2.7.2",
     "jsonwebtoken": "8.5.1",
+    "jwks-rsa": "^2.0.5",
     "lodash": "^4.17.11",
-    "moment": "2.24.0",
+    "moment": "^2.29.2",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.9",
     "mongoose-unique-validator": "2.0.3",
     "morgan": "^1.9.1",
+    "node-fetch": "^3.2.3",
     "sha1": "1.1.1"
   },
   "devDependencies": {
